--- a/src/views/partials/generales/nav.ejs
+++ b/src/views/partials/generales/nav.ejs
@@ -4,7 +4,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fill px-lg-0 py-0 px-3">
         <div class="container">
 
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/">
                <!-- <span class="fa fa-grav"></span> -->
                <img style="width: 150px;" src="../img/Logos/logoOficial/logo-lookAtThis.webp" alt=""> 
             </a>
@@ -72,7 +72,7 @@
                         </div>
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item" href="#">Configurar perfil</a>
+                      <a class="dropdown-item" href="/confperfil">Configurar perfil</a>
                       <a class="dropdown-item" href="/logout">Cerrar sesión</a>
                     </div>
                     
